# vla-gesticulation

./: .gitignore  arch.py  inference_so100.py  multimodal_gesture_clip.py  pyproject.toml  reqs.txt  scrape.sh  slop.py  test_movement.py  train_multimodal_clip.py  zds_1633708.err  zds_1633708.out  zds_1633710.err  zds_1633710.out  zenodo_scraper.py
